--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <meta charset="UTF-8">
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
+<link rel="stylesheet" href="pagestyle.css">
 <script src=""></script>
 <body>
 
