--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="pagestyle.css">
-<script src=""></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="pagestyle.css">
+    <script src=""></script>
+</head>
+
 <body>
 
-<img src="topimg.jpg" alt="LA" style="width:100%">
+    <img src="topimg.jpg" alt="LA" style="width:100%">
 
-<div class="">
- <h1>Welcome from Ben</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
-</div>
+    <div class="">
+        <h1>Welcome from Ben</h1>
+        <p>This is a paragraph.</p>
+        <p>This is another paragraph.</p>
+    </div>
 
 </body>
 </html>
