--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <img src="topimg.jpg" alt="LA" style="width:100%">
 
-    <div class="">
+    <div id="div">
         <h1>Welcome from Ben</h1>
         <p>This is a paragraph.</p>
         <p>This is another paragraph.</p>
